feat: file-loader&url-loader解析图片和字体文件

--- a/src/search.less
+++ b/src/search.less
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: 'JiZiJingDianShuJianFan';
+  src: url('./assets/font/JiZiJingDianLiShuJianFan-Shan\(GEETYPE-LiShuGBT-Flash\)-2.ttf') format('truetype');
+}
+
 .search-text {
   font-size: 20px;
   color: red;
   font-weight: bold;
-  
+  font-family: 'JiZiJingDianShuJianFan';
 }
