--- a/src/search.less
+++ b/src/search.less
@@ -5,7 +5,7 @@
 
 .search-text {
   font-size: 20px;
-  color: red;
+  color: skyblue;
   font-weight: bold;
   font-family: 'JiZiJingDianShuJianFan';
 }
