feat: webpack-dev-server 支持热更新

--- a/src/search.less
+++ b/src/search.less
@@ -5,7 +5,7 @@
 
 .search-text {
   font-size: 20px;
-  color: skyblue;
+  color: blue;
   font-weight: bold;
   font-family: 'JiZiJingDianShuJianFan';
 }
